update web interface to correct some weird issues on Firefox

--- a/src/assets/styles/viewer.scss
+++ b/src/assets/styles/viewer.scss
@@ -61,7 +61,7 @@ $h-diff: ($thumb-h - $track-h)/2;
     top: 0;
     z-index: 1;
     display: flex;
-    padding: 2vh 0 6vh;
+    padding: 2vh 0 4.5vh;
     flex-direction: row;
     background-color: var(--color-bg);
     align-items: center;
@@ -115,13 +115,14 @@ $h-diff: ($thumb-h - $track-h)/2;
     .stroke-config {
       display: flex;
       flex-direction: row;
+      align-items: center;
 
       label {
         margin-right: 10px;
       }
 
-      output {
-        display: inline-block;
+      .output {
+        display: inline-flex;
         padding: 2px 6px;
         margin-left: 10px;
         font-size: 1.4rem;
@@ -204,7 +205,7 @@ $h-diff: ($thumb-h - $track-h)/2;
       display: flex;
       padding: 24px 0 36px;
       margin-bottom: 12vh;
-      justify-content: center;
+      justify-content: left;
       background: var(--color-bg);
 
       .cat-split {
@@ -216,7 +217,7 @@ $h-diff: ($thumb-h - $track-h)/2;
       .cat-name,
       .cat-no {
         font-family: var(--font-family-head);
-        font-size: 2.4rem;
+        font-size: 2rem;
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 0.1rem;
